Fix alignment issue on docs variable reference tables

--- a/docs/assets/scss/_reference.scss
+++ b/docs/assets/scss/_reference.scss
@@ -13,4 +13,8 @@
   td:first-child code {
     font-weight: bold;
   }
+
+  td > p:last-child {
+    margin-bottom: 0;
+  }
 }
